[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rokuvim"
version = "0.3.0"
description = "Keyboard-driven Roku remote for the terminal"
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "heheoppsy" }]
dependencies = [
    "pycurl",
    "curtsies"
]

[project.scripts]
rokuvim = "rv3.rv3:main"

[tool.setuptools.packages.find]
include = ["rv3*"]
